--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -63,7 +63,7 @@ span.table-heading {
     font-family: var(--font-family-heading);
     font-size: clamp(1.05rem, calc(0.89rem + 0.78vw), 1.5rem);
     line-height: clamp(1.38rem, calc(1.18rem + 0.98vw), 1.94rem);
-    color: var(--pampas);
+    color: var(--font-color-body);
 }
 
 p {
@@ -95,7 +95,7 @@ small strong {
     font-family: var(--font-family-body);
     font-weight: 600;
     font-size: clamp(0.88rem, calc(0.83rem + 0.22vw), 1rem);
-    color: var(--pampas);
+    color: var(---font-color-body);
 }
 
 small {
